--- a/github/workflows/publish.yml
+++ b/github/workflows/publish.yml
@@ -35,3 +35,6 @@ jobs:
           target: gh-pages
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SPOTIFY_CLIENT: ${{ secrets.SPOTIFY_CLIENT }}
+          SPOTIFY_SECRET: ${{ secrets.SPOTIFY_SECRET }}
+          
